--- a/index.html
+++ b/index.html
@@ -1,123 +1,139 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>University of Maryland Fan Page</title>
-  <meta name="description" content="This is the description that search engines will display. Aim for 145-155 characters.">
-  <meta name="author" content="Insert the content author or owner name here">
+<meta charset="utf-8">
+<title>London Calling: 25th Anniversary Legacy Edition</title>
 
-  <!-- Link to your JS file -->
-  <script src="scripts/script.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 
-  <!-- Link to your CSS file -->
-  <link rel="stylesheet" href="css/style.css">
+<style type="text/css">
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #000;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #ff0000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #0071ce;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  padding: 30px;
+}
+
+.main {
+  width: 800px;
+  padding: 20px;
+}
+
+.sidebar {
+  width: 400px;
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin-left: 20px;
+}
+
+img {
+  width: 100%;
+  border: solid 1px black;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+table, th, td {
+  border: 1px solid #000;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+iframe {
+  margin: 40px 0;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 18px;
+}
+</style>
 
 </head>
+
 <body>
 
-<h1>Welcome to my University of Maryland Fan Page!</h1>
+<div class="container">
 
-<p>This is my page deticated to the University of Maryland. This university is located in College Park, Maryland and has roughly 30,000 undergraduate students.</p>
+  <div class="main">
+    <h1>London Calling: 25th Anniversary Legacy Edition</h1>
+    <p><em>Original Article by Amanda Petrusich, <a href="http://www.pitchfork.com">Pitchfork.com</a></em><br>
+    September 21, 2004</p>
 
-<img src="images/umdseal.png" style="height: 100px; width: 100px">
+    <p><strong>A quarter-century on from its 1979 release, The Clash's <em>London Calling</em> remains one of punk's defining documents. Now it's been given its proper due from Epic, who today are releasing an expanded three-disc edition that covers the original LP, a set of 21 demos (including five previously unheard tracks), and a DVD containing <em>The Last Testament</em>, Clash documentarian Don Letts' film about the album's creation. And that's not even getting into the set's lavish fetishist packaging.</strong></p>
 
-<p>This is the University's <a href="https://umd.edu/" target="_blank">website</a>. </p>
+    <p>The 25th anniversary reissue of The Clash's <em>London Calling</em> is satisfyingly thick and protected by a thin plastic sleeve. The package sits fat at three stories high; the spine is broad, smooth and silver. Pennie Smith's unfocused, emblematic cover shot remains intact, with Paul Simonon's bass hovering, vertical and doomed, between Elvis-baiting pink and green text. Stacked inside are three separate discs: the original 19-song album, a 21-track disc containing rehearsal sessions for the record ("the long lost Vanilla Tapes"), and a DVD of <em>The Last Testament</em>, Don Letts' 30-minute, after-the-fact documentary about the making of <em>London Calling</em>. Here, neatly lined up: preparation, realization, hindsight. Finally. This is how they did it.</p>
 
-<img src="images/UMD.jpg">
+    <p>For those who came of age in the late 80s and early 90s, calling The Clash a punk band was (and remains) more a matter of affect than honesty—in 2004, wholly and completely divorced from a context that never fully resonated with a global audience, The Clash are a rock band, and 1979's <em>London Calling</em> is their creative apex, a booming, infallible tribute to throbbing guitars and spacious ideology. By the late 70s, "punk" was more specifically linked with rusted safety pins, shit-covered Doc Martens, and tight pink sneers than any steadfast, organized philosophy; The Clash insisted on forefronting their politics. This album tackles topical issues with impressive gusto—the band cocks their cowboy hats, assumes full outlaw position, and pillages the world market for sonic fodder and lyric-ready injustice. A quarter-century after its first release, <em>London Calling</em> is still the concentrated essence of The Clash's unparalleled fervor.</p>
 
+    <div align="center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/EfK-WX2pa8c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
+    <p>As always, <em>London Calling</em>'s title track holds steady as the record's cosmic lynchpin: Horrifyingly apocalyptic, "London Calling" is riddled with weird werewolf howls and big, prophetic hollers, Mick Jones' punchy guitar bursts tapping little nails into our skulls, pushing hard for total lunacy. Empowered and unafraid, Strummer reveals self-skewering prophecies, panting hard about nuclear errors and impending ice ages. He also spitefully lodges some of the most unpleasantly convincing calls to arms ever committed to tape, commanding his followers—now, then, future—to storm the streets at full, leg-flailing sprints. Even if The Clash were more blatantly inspired by the musical tenets of dub and reggae, "London Calling" unapologetically cops the fury of punk's blind-and-obliterate full-body windmilling, bypassing the cerebral cortex to sink deep into our muscles. From "London Calling" on, The Clash do not let go; each track builds on the last, pummeling and laughing and slapping us into dumb submission.</p>
 
-<ul>Facts and Rankings</ul>
-<li>UMD is #10 among public universities</li>
-<li>70 colleges, schools and programs ranked in the top 25 nationwide</li>
-<li>#7 among U.S. universities for undergraduate entrepreneurship</li>
+    <p>And now, we get to watch how it fell together: Using only a Teac four-track tape recorder linked up to a portastudio, The Clash inadvertently immortalized their <em>London Calling</em> rehearsal sessions at Vanilla Studios (a former rubber factory-gone-rehearsal-space in Pimlico, London) in the summer of 1979, several weeks before the album sessions officially opened at Wessex Studios. One set of tapes got left on the Tube. Another got crammed into a box.</p>
 
-<p><a href="video.html"> Check out some videos here!</a></p>
+    <p>The intricate (and generally convoluted) mythology of the "long lost recording" is embarrassingly familiar to rock fans—even non-completists are awkwardly prone to chasing down bits of buried tape with insane, eye-bulging intensity. With precious few exceptions, the anticipation of a hidden, indefinitely concealed secret generally supersedes the impact of the actual artifact. Still, the possibility of stumbling into transcendence keeps the search heated, and sometimes stupidly dramatic. Earlier this month, Mick Jones bravely explained to <em>Mojo</em>'s Pat Gilbert exactly how he uncovered the tapes: "I sensed where they were and that took me to the right box. I opened it up and found them... It was pretty amazing."</p>
+  </div>
 
-<table border="1" width="500" cellpadding="5"
-<tr>
-<td width="300">
-<strong>Colleges and Programs</strong>
-</td>
-<td width="100">
-<strong>Abbreviation</strong>
+  <div class="sidebar">
+  <img src= "images/theClash.jpg">
 
-<tr>
-<td>College of Agriculture and Natural Resources</td>
-<td>AGNR</td>
-</tr>
-
-<tr>
-<td>School of Architecture, Planning and Preservation</td>
-<td>ARCH</td> 
-</tr>
-
-<tr>
-<td>College of Arts and Humanities</td>
-<td>ARHU</td>
-</tr>
-
-<tr>
-<td>College of Behavioral & Social Sciences</td>
-<td>BSOS</td>
-</tr>
-
-<tr>
-<td>Robert H. Smith School of Business</td>
-<td>BMGT</td>
-</tr>
-
-<tr>
-<td>College of Computer, Mathematical, & Natural Sciences</td>
-<td>CMNS</td>
-</tr>
-
-<tr>
-<td>College of Education</td>
-<td>EDUC</td>
-</tr>
-
-<tr>
-<td>A. James Clark School of Engineering</td>
-<td>ENGR</td>
-</tr>
-
-<tr>
-<td>College of Information</td>
-<td>INFO</td>
-</tr>
-
-<tr>
-<td>Philip Merril College of Journalism</td>
-<td>JOUR</td>
-</tr>
-
-<tr>
-<td>Letters & Sciences</td>
-<td>LTSC</td>
-</tr>
-
-<tr>
-<td>School of Public Health</td>
-<td>SPH</td>
-</tr>
-
-<tr>
-<td>School of Public Policy</td>
-<td>SPP</td>
-</tr>
-
-</table>
-
-<p style="font-family: 'Arial Black', sans-serif; font-size: 50px;">
-  Go Terps!
-</p>
-
-<img src="images/terp.png" style="height: 300px; width: 300px">
-
-
-</body>
-
-</html>
+    <table>
+      <tr>
+        <th>Track Number</th>
+        <th>Track Name</th>
+      </tr>
+      <tr><td>1</td><td>London Calling</td></tr>
+      <tr><td>2</td><td>Brand New Cadillac</td></tr>
+      <tr><td>3</td><td>Jimmy Jazz</td></tr>
+      <tr><td>4</td><td>Hateful</td></tr>
+      <tr><td>5</td><td>Rudie Can't Fail</td></tr>
+      <tr><td>6</td><td>Spanish Bombs</td></tr>
+      <tr><td>7</td><td>The Right Profile</td></tr>
+      <tr><td>8</td><td>Lost in the Supermarket</td></tr>
+      <tr><td>9</td><td>Clampdown</td></tr>
+      <tr><td>10</td><td>The Guns of Brixton</td></tr>
+      <tr><td>11</td><td>Wrong 'Em Boyo</td></tr>
+      <tr><td>12</td><td>Death or Glory</td></tr>
+      <tr><td>13</td><td>Koka Kola</td></tr>
+      <tr><td>14</td><td>The Card Cheat</td></tr>
+      <tr><td>15</td><td>Lover's Rock</td></tr>
+      <tr><td>16</td><td>4 Horsemen</td></tr>
+      <tr><td>17</td><td>I'm Not Down</td></tr>
+      <tr><td>18</td><td>Revolution Rock</td></tr>
+      <tr><td>19</td><td>Train in Vain</td></tr>
