--- a/index.html
+++ b/index.html
@@ -1,139 +1,162 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="utf-8">
-<title>London Calling: 25th Anniversary Legacy Edition</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The National Herald</title>
+  <link rel="stylesheet" href="styles.css">
 
-<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+  <!-- FILL OUT META TAGS! -->
+  <meta name="description" content="">
+  <meta name="author" content="The National Herald">
 
-<style type="text/css">
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #000;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
+  <!-- TWITTER SUMMARY CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Headline Headline Headline">
 
-a {
-  color: #ff0000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:hover {
-  color: #0071ce;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  background-color: #fff;
-  padding: 30px;
-}
-
-.main {
-  width: 800px;
-  padding: 20px;
-}
-
-.sidebar {
-  width: 400px;
-  background-color: #f0f0f0;
-  padding: 20px;
-  margin-left: 20px;
-}
-
-img {
-  width: 100%;
-  border: solid 1px black;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-
-table, th, td {
-  border: 1px solid #000;
-}
-
-th, td {
-  padding: 10px;
-  text-align: left;
-}
-
-iframe {
-  margin: 40px 0;
-}
-
-h1 {
-  font-weight: 700;
-  font-size: 24px;
-}
-
-h2 {
-  font-weight: 700;
-  font-size: 18px;
-}
-</style>
-
+  <!-- OPEN GRAPH CARD -->
+  <meta property="og:title" content="Headline Headline Headline">
+  <meta property="og:site_name" content="The National Herald">
+  <meta property="og:url" content="TBD">
+  <meta property="og:description" content="Lead Graph Goes Here.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="TBD">
 </head>
 
 <body>
 
-<div class="container">
+<!-- RETURN TO TOP -->
+<a name="top"></a>
+<!-- END RETURN TO TOP -->
 
-  <div class="main">
-    <h1>London Calling: 25th Anniversary Legacy Edition</h1>
-    <p><em>Original Article by Amanda Petrusich, <a href="http://www.pitchfork.com">Pitchfork.com</a></em><br>
-    September 21, 2004</p>
+<!-- SITE BRANDING -->
+<div class="grid-container">
+  <div class="grid-x grid-padding-x">
+    <div class="large-12 cell titleStyle">
+      <h1>The National Herald</h1>
+    </div>
+  </div>
+</div>
+<!-- END SITE BRANDING -->
 
-    <p><strong>A quarter-century on from its 1979 release, The Clash's <em>London Calling</em> remains one of punk's defining documents. Now it's been given its proper due from Epic, who today are releasing an expanded three-disc edition that covers the original LP, a set of 21 demos (including five previously unheard tracks), and a DVD containing <em>The Last Testament</em>, Clash documentarian Don Letts' film about the album's creation. And that's not even getting into the set's lavish fetishist packaging.</strong></p>
+<!-- NAV BAR -->
+<div class="grid-container fluid navStyle">
+  <div class="grid-x grid-padding-x">
+    <div class="large-12 cell">
+      <a href="#" class="navItem">Home</a>
+      <a href="#" class="navItem">National</a>
+      <a href="#" class="navItem">International</a>
+      <a href="#" class="navItem">Local</a>
+      <a href="#" class="navItem">Lifestyle</a>
+      <a href="#" class="navItem">Sports</a>
+      <a href="#" class="navItem">Business</a>
+      <a href="#" class="navItem">Special Features</a>
+    </div>
+  </div>
+</div>
+<!-- END NAV BAR -->
 
-    <p>The 25th anniversary reissue of The Clash's <em>London Calling</em> is satisfyingly thick and protected by a thin plastic sleeve. The package sits fat at three stories high; the spine is broad, smooth and silver. Pennie Smith's unfocused, emblematic cover shot remains intact, with Paul Simonon's bass hovering, vertical and doomed, between Elvis-baiting pink and green text. Stacked inside are three separate discs: the original 19-song album, a 21-track disc containing rehearsal sessions for the record ("the long lost Vanilla Tapes"), and a DVD of <em>The Last Testament</em>, Don Letts' 30-minute, after-the-fact documentary about the making of <em>London Calling</em>. Here, neatly lined up: preparation, realization, hindsight. Finally. This is how they did it.</p>
+<!-- BODY COPY -->
+<div class="grid-container articleContainer">
+  <div class="grid-x grid-margin-x">
+    <div class="large-8 medium-8 small-12 cell">
+      <h2>Berlin Wall Falls; Thousands Migrate from East Germany to West</h2>
 
-    <p>For those who came of age in the late 80s and early 90s, calling The Clash a punk band was (and remains) more a matter of affect than honesty—in 2004, wholly and completely divorced from a context that never fully resonated with a global audience, The Clash are a rock band, and 1979's <em>London Calling</em> is their creative apex, a booming, infallible tribute to throbbing guitars and spacious ideology. By the late 70s, "punk" was more specifically linked with rusted safety pins, shit-covered Doc Martens, and tight pink sneers than any steadfast, organized philosophy; The Clash insisted on forefronting their politics. This album tackles topical issues with impressive gusto—the band cocks their cowboy hats, assumes full outlaw position, and pillages the world market for sonic fodder and lyric-ready injustice. A quarter-century after its first release, <em>London Calling</em> is still the concentrated essence of The Clash's unparalleled fervor.</p>
+      <p class="dateline"><em>Dateline: Berlin, November 8, 1989</em></p>
 
-    <div align="center">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/EfK-WX2pa8c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>BERLIN (AP) — East Germany said today it was opening its borders to the rest of the world and that its citizens can travel or emigrate anywhere, including through the 28-year-old Berlin Wall.</p>
+
+      <p>Guenter Schabowski, a member of the ruling Politburo, said that those who want to visit other countries and then return would still need a visa, but that the visa requests would be handled without delay.</p>
+
+      <p>The stunning announcement comes on the heels of a remarkable series of events that has shaken this once rigidly controlled Communist nation.</p>
+
+      <div class="video-container">
+        <iframe width="560" height="315" src="" 
+          title="The Fall of the Berlin Wall - 1989" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+      <p>Communist leaders also decided today to consider even more changes in the government hierarchy. The Communist Party’s Central Committee set a party conference for Dec. 15-17. A party conference, a forum for making major changes in party policy, was last held in 1986. The official ADN news agency said the conference would discuss personnel changes in the 163-member Central Committee.</p>
+
+      <p>The move to open the borders comes after decades of fencing East Germans in to prevent their flight to the West. The Berlin Wall has divided Berlin and the two German nations since 1961.</p>
+
+      <p>In Washington, Secretary of State James A. Baker III said free travel for East Germans would be a “very positive development” that the United States would welcome. “We’ve been talking a long time about freedom of travel being a basic human right. We’ve been talking a long time about open borders. We’ve been talking a long time about the importance of seeing the wall come down,” Baker said.</p>
+
+      <p>Schabowski said those who want to emigrate can go to West Germany directly without having to go through a third country. More than 500,000 East Germans have fled through neighboring Czechoslovakia since Saturday and about 200,000 have fled this year.</p>
+
+      <p>Schabowski told reporters in East Berlin that the decision was made during a Central Committee meeting. He said the decision means all East Germans “can travel over all East German border checkpoints.”</p>
+
+      <p>While stunning changes have taken place at the top, daily street protests have continued almost unabated for the last several weeks. About 40,000 people demonstrated Wednesday night in Neubrandenburg and near Karl-Marx-Stadt for free elections and an end to authoritarian one-party rule, ADN said.</p>
+
+      <p>In the first official Soviet comment since Krenz reshuffled the country’s top leadership, Foreign Ministry spokesman Gennadi I. Gerasimov told a news briefing in Moscow today that it was clear East Germany was undertaking a “renewal of socialism.”</p>
+
+<p>“They’re improving the situation in the sense that they’re moving toward perestroika on their own terms,” he said, referring to the Kremlin’s current program of reforms.</p>
+
+<p>Krenz touched on the volatile topic of multiparty elections in a speech to the Central Committee that was published today in state newspapers. He called for a “new election law that ensures free, democratic general elections with a secret ballot.”</p>
+
+<p>He proposed “public supervision in every stage of the balloting.”</p>
+
+<p>Krenz did not say whether he was urging a true multiparty system in East Germany. Officials already say elections are democratic, even though the system guarantees the Communists virtually unanimous approval.</p>
+
+<p>Krenz also promised new laws on freedom of assembly, association and the press, but gave no details.</p>
+
+<p>However, he did say independent groups might have a role in the nation’s politics as East Germany tries to recover from the shock of losing more than 200,000 mostly young, skilled workers to the West this year.</p>
+
+<p>Schabowski said earlier today that the Communists were ready to go into free elections “without any limits.”</p>
+
+<p>“If we profess free elections here, then we are professing free elections without any limits and with all risks that are connected,” Schabowski told West Germany’s Westdeutsche Rundfunk radio.</p>
+
+<p>East Germany’s pro-democracy opposition groups have made free elections their main demand, although Krenz has repeatedly said that any changes can’t jeopardize the Communist Party’s “leading role.” Party dominance also is embodied in the nation’s constitution and a constitutional change would be required to abolish it.</p>
+
+<p>Guenther Hartmann, leader of the small National Democratic party that previously had closely followed Communist policy, also called for free elections today. Writing in the party’s National Zeitung newspaper, he questioned whether the constitutional article that guarantees the party’s leading role “could still stand.”</p>
+
+<p>Meanwhile, a group of 15 prominent East Berlin Communist intellectuals and officials wrote a letter to the Central Committee suggesting the Berlin Wall be torn down in the near future.</p>
+
+<p>“It is also imaginable, even in the foreseeable future, that the wall will become a relic of the past” if an agreement is signed with West Germany that would prevent “damage to the East German economy,” the group said.</p>
+
+<p>Communist authorities built the Berlin Wall in 1961 to stop an exodus to West Germany. It became a symbol of the differences between East and West, differences that Soviet leader Mikhail S. Gorbachev has sought to erase by urging reforms in the Soviet bloc.</p>
+
+<p>Krenz, who assumed power just three weeks ago, on Wednesday purged much of the old guard from the Communist Party’s ruling Politburo. The 21-member body was reduced to 11.</p>
+
+<p>The leadership reshuffle swept aside nine aging Politburo members and brought in four new ones, including Dresden party chief Hans Modrow. Seen as a reformer, Modrow was proposed as the new premier when the 44-person Cabinet resigned en masse Tuesday.</p>
+
+<p class="return-top">
+  <a href="#top">Return to Top</a>
+</p>
+
+
+    <div class="large-4 medium-4 small-12 cell sidebar" style="background-color:#f8f8f8; padding:1.5rem; border-left:3px solid #ccc; border-radius:4px;">
+      <aside class="related-resources">
+        <h3 style="font-size:1.25rem; margin-bottom:0.75rem; color:#333;">Related Resources</h3>
+        <ul style="list-style:none; padding-left:0; margin:0;">
+          <li style="margin-bottom:0.5rem;">
+            <a href="https://en.wikipedia.org/wiki/East_Germany" target="_blank" style="text-decoration:none; color:#005ea2;">East German History (Wikipedia)</a>
+          </li>
+          <li style="margin-bottom:0.5rem;">
+            <a href="https://en.wikipedia.org/wiki/West_Germany" target="_blank" style="text-decoration:none; color:#005ea2;">West German History (Wikipedia)</a>
+          </li>
+        </ul>
+      </aside>
     </div>
 
-    <p>As always, <em>London Calling</em>'s title track holds steady as the record's cosmic lynchpin: Horrifyingly apocalyptic, "London Calling" is riddled with weird werewolf howls and big, prophetic hollers, Mick Jones' punchy guitar bursts tapping little nails into our skulls, pushing hard for total lunacy. Empowered and unafraid, Strummer reveals self-skewering prophecies, panting hard about nuclear errors and impending ice ages. He also spitefully lodges some of the most unpleasantly convincing calls to arms ever committed to tape, commanding his followers—now, then, future—to storm the streets at full, leg-flailing sprints. Even if The Clash were more blatantly inspired by the musical tenets of dub and reggae, "London Calling" unapologetically cops the fury of punk's blind-and-obliterate full-body windmilling, bypassing the cerebral cortex to sink deep into our muscles. From "London Calling" on, The Clash do not let go; each track builds on the last, pummeling and laughing and slapping us into dumb submission.</p>
 
-    <p>And now, we get to watch how it fell together: Using only a Teac four-track tape recorder linked up to a portastudio, The Clash inadvertently immortalized their <em>London Calling</em> rehearsal sessions at Vanilla Studios (a former rubber factory-gone-rehearsal-space in Pimlico, London) in the summer of 1979, several weeks before the album sessions officially opened at Wessex Studios. One set of tapes got left on the Tube. Another got crammed into a box.</p>
-
-    <p>The intricate (and generally convoluted) mythology of the "long lost recording" is embarrassingly familiar to rock fans—even non-completists are awkwardly prone to chasing down bits of buried tape with insane, eye-bulging intensity. With precious few exceptions, the anticipation of a hidden, indefinitely concealed secret generally supersedes the impact of the actual artifact. Still, the possibility of stumbling into transcendence keeps the search heated, and sometimes stupidly dramatic. Earlier this month, Mick Jones bravely explained to <em>Mojo</em>'s Pat Gilbert exactly how he uncovered the tapes: "I sensed where they were and that took me to the right box. I opened it up and found them... It was pretty amazing."</p>
   </div>
+</div>
+<!-- END BODY COPY -->
 
-  <div class="sidebar">
-  <img src= "images/theClash.jpg">
+<!-- FOOTER BAR -->
+<div class="grid-container fluid footerStyle">
+  <div class="grid-x grid-padding-x">
+    <div class="large-12 cell">
+      <p>&copy; 2023 The National Herald</p>
+    </div>
+  </div>
+</div>
+<!-- END FOOTER BAR -->
 
-    <table>
-      <tr>
-        <th>Track Number</th>
-        <th>Track Name</th>
-      </tr>
-      <tr><td>1</td><td>London Calling</td></tr>
-      <tr><td>2</td><td>Brand New Cadillac</td></tr>
-      <tr><td>3</td><td>Jimmy Jazz</td></tr>
-      <tr><td>4</td><td>Hateful</td></tr>
-      <tr><td>5</td><td>Rudie Can't Fail</td></tr>
-      <tr><td>6</td><td>Spanish Bombs</td></tr>
-      <tr><td>7</td><td>The Right Profile</td></tr>
-      <tr><td>8</td><td>Lost in the Supermarket</td></tr>
-      <tr><td>9</td><td>Clampdown</td></tr>
-      <tr><td>10</td><td>The Guns of Brixton</td></tr>
-      <tr><td>11</td><td>Wrong 'Em Boyo</td></tr>
-      <tr><td>12</td><td>Death or Glory</td></tr>
-      <tr><td>13</td><td>Koka Kola</td></tr>
-      <tr><td>14</td><td>The Card Cheat</td></tr>
-      <tr><td>15</td><td>Lover's Rock</td></tr>
-      <tr><td>16</td><td>4 Horsemen</td></tr>
-      <tr><td>17</td><td>I'm Not Down</td></tr>
-      <tr><td>18</td><td>Revolution Rock</td></tr>
-      <tr><td>19</td><td>Train in Vain</td></tr>
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
+
+</body>
+</html>
