--- a/DataViz/Index.html
+++ b/DataViz/Index.html
@@ -116,11 +116,16 @@
             <p>When comparing consumer complaints about Navient across U.S. regions, a clear and uneven pattern can be seen. The South accounts for more complaints than any other region, driven largely by Florida and Texas, which together produce more than 2.7 million complaints. This makes the South an outlier and its largest states not only have big populations but also show intense levels of frustration. In short, users in the South appear to be disproportionately affected, signaling widespread dissatisfaction with Navient’s handling of student loans.</p>
 
 <p.>In contrast, the West, Northeast, and Midwest show more concentrated or balanced patterns, depending on the region. The West is defined almost entirely by California, which accounts for more than half of all complaints in that region, reflecting the scale of its student-loan borrower population. The Northeast shows a similar pattern, with New York and Pennsylvania making up the majority of its complaints. Meanwhile, the Midwest has the lowest overall total and the most even distribution across states, suggesting that borrower experiences, while still negative, are less concentrated or severe than in regions with massive economic centers. These distinctions show that the borrower experience with Navient isn’t uniform across the country. Instead, complaint patterns appear to be shaped by population density and regional economics.</p.>
+<p><a href="https://www.studentloanplanner.com/navient-lawsuit-updates/">Visit for more Information</a></p> 
         </ul>
 
     </div>
 
 </div>
+
+    
+        
+    </div>
 
 </body>
 </html>
